--- a/mine.html
+++ b/mine.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -10,7 +10,7 @@
         <table  cellspacing = "20">
             <tr>
                 <td>
-                    <img src="C:\python\html\IMG-20220710-WA0015-modified.png" alt="self  photo" style="width:200px;height:200px;">
+                    <img src="IMG-20220710-WA0015-modified.png" alt="self  photo" style="width:200px;height:200px;">
                 </td>
                 <td>
                     <h1 ,  align = "lift">name: muhmod alshraky
