--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li>flask</li>
         </ol>
         <ul>
-            <li><a href = "C:\python\html\contact.html">contact with me</a></li>
+            <li><a href = "contact.html">contact with me</a></li>
         </ul>
     </body>
 </html>
