--- a/index.html
+++ b/index.html
@@ -1,105 +1,69 @@
-
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>♟ Muhmod's Personal Site </title>
-    </head>
-    <body>
-        <table  cellspacing = "20">
-            <tr>
-                <td>
-                    <img src="IMG-20220710-WA0015-modified.png" alt="self  photo" style="width:200px;height:200px;">
-                </td>
-                <td>
-                    <h1 ,  align = "lift">name: muhmod alshraky
-                        <br>
-                        profile
-                    </h1>
-                </td>
-            </tr>
+<head>
+    <meta charset="UTF-8">
+    <title>muhmod alshraky</title>
+    <link rel="stylesheet" href="\python\CSS-my site\css\styles.css">
+    <link rel="icon" href="giphy.gif">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@700&family=Roboto:ital@1&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@700&family=Roboto:ital@1&display=swap" rel="stylesheet">
+</head>
 
-        </table>
-        <p , align = "lift">beginner programmer and i do not have experience <br> 
-            skills:<strong> automation , api  , back-end development  </strong>, <br> under improvement <em>c language </em> , html:5 
-        </p>
-        <hr , size="5" , color="black">
-        <p>
-        <strong> Personal info </strong><br>
-        age:19 <br>
-        height:179<br>
-        I've been playing karate for about eight years, and I've won several championships and medals, and I have a brown belt<br> 
-       <strong> شغلوني ونبي اخد خبرة بس </strong> 
-        </p>
+<body  ,bgcolor= blue >
+    <div class="top">
+        <img src="css\CSS - My Site Images\cloud.png"  alt="cloud" class="top_cloud">
+        <h1>
+            I'm muhmod alshraky
+        </h1>
+
+       <p class = "por">
+         a programmer
+       </p>
+       <img src="css\CSS - My Site Images\cloud.png" alt="cloud" class="bot_cloud">
+       <img src="css\CSS - My Site Images\mountain.png" alt="mountain" class="mountain">
+    
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+            <img src="IMG-20220710-WA0015-modified.png" alt="me" class="photo">
+          <h2 class="hi">Hello.</h2>
+          <p class="int">I study programming and try to be a professional web developer </p>
+        </div>
+
+        <div class="skills">
+          <h2 class="My_Skills">My Skills</h2>
+          <div class="skill-row">
+            <br>
+            <img class="python" src="5848152fcef1014c0b5e4967.png" alt="">
+            
+            <h3 class="py">python</h3>
+            <p class="p">I studied Python for 6 months and can handle  API, automation and simple user interfaces</p>
+          </div>
+          <hr>
+          <div class="skill-row">
+             <img  class= "html5"src="coding.png" alt="html5">
+
+            <h3 class="py">HTML & CSS</h3>
+            <p class="p">I have been studying HTML  for a while and I am still learning more and have recently started CSS</p>
+          </div>
+        </div>
         <hr>
-        <h4>
-            <strong>Course:</strong><br>
-        </h4>
-        <ul>
-            <li>100 days of code</li>
-            <li>cs50</li> 
-        </ul>
-        <table ,  cellspacing="15">
-            <thead>
-                <tr>
-                    <th>
-                          language|
-                    </th>
-                    <hr>
-                    <th>
-                          Usage time 
-                    </th>
-                    <th>
-                        ranking
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        C 
-                    </td>
-                    <td>
-                        1 month
-                    </td>
-                    <td>
-                        ⭐⭐
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        python
-                    </td> 
-                    <td>
-                        6 month
-                    </td>
-                    <td>
-                        ⭐⭐⭐⭐⭐
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        htlm
-                    </td> 
-                    <td>
-                        2 days
-                    </td>
-                    <td>
-                        ⭐⭐⭐
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <hr>
-        <ol>
-            <li><strong>In the learning plan</strong>  </li>
-            <li>CSS</li>
-            <li>JS</li>
-            <li>flask</li>
-        </ol>
-        <ul>
-            <li><a href = "contact.html">contact with me</a></li>
-        </ul>
-    </body>
-</html>
+        <div class="contact-me">
+          <h2 class = "Contact">Get In Touch</h2>
+          <h3 class = "Contact">Contact me for any training job or creating a simple website design</h3>
+          <p class = "Contact">I would be glad to hear your advice and suggestions</p>
+          <hr>
+          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
+      </div>
+      <div class="bottom-container">
+        <a class="li" href="https://www.instagram.com/m_alshraky/">instgram</a>
+        <a class="li" href="https://twitter.com/">twitter</a>
+        <a class="li" href="https://github.com/mshraky3">github</a>
+      </div>
+</body>
+</html> 
