--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>muhmod alshraky</title>
-    <link rel="stylesheet" href="CSS-my site\css\styles.css">
+    <link rel="stylesheet" href="css\styles.css">
     <link rel="icon" href="giphy.gif">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
