--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body  ,bgcolor= blue >
     <div class="top">
-        <img src="css\CSS - My Site Images\cloud.png"  alt="cloud" class="top_cloud">
+        <img src="CSS - My Site Images\cloud.png"  alt="cloud" class="top_cloud">
         <h1>
             I'm muhmod alshraky
         </h1>
@@ -23,8 +23,8 @@
        <p class = "por">
          a programmer
        </p>
-       <img src="css\CSS - My Site Images\cloud.png" alt="cloud" class="bot_cloud">
-       <img src="css\CSS - My Site Images\mountain.png" alt="mountain" class="mountain">
+       <img src="CSS - My Site Images\cloud.png" alt="cloud" class="bot_cloud">
+       <img src="CSS - My Site Images\mountain.png" alt="mountain" class="mountain">
     
     </div>
     <div class="middle-container">
