--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         0 0 151px rgb(255, 255, 255);">(Click on words)</span>
 
 
-<a href="https://www.instagram.com/m_alshraky/"> You should always talk to me So click here and talk to me يسطا</a>
+<a href="https://www.instagram.com/m_alshraky/"> i love u so  You should always talk to me So click here and talk to me يسطا</a>
 
 </body>
 </html>
